--- a/1.html
+++ b/1.html
@@ -28,40 +28,40 @@
     <div id="columns">
       <figure>
         <img src="./간판+이미지/사인탑/1.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>한끼줍쇼</figcaption>
       </figure>
 	<figure>
         <img src="./간판+이미지/사인탑/2.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>신평 축산물 생고기 도매센터</figcaption>
       </figure>
  
 		 <figure>
         <img src="./간판+이미지/사인탑/3.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>사해 양념갈비</figcaption>
       </figure>
 	<figure>
         <img src="./간판+이미지/사인탑/4.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>MG 새마을 금고</figcaption>
       </figure>
 		 <figure>
         <img src="./간판+이미지/사인탑/5.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>오토바이 타고 세계여행</figcaption>
       </figure>
 	<figure>
         <img src="./간판+이미지/사인탑/6.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>반송 꽃 플라워</figcaption>
       </figure>
 		<figure>
         <img src="./간판+이미지/사인탑/7.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>KCC 부동산</figcaption>
       </figure>
 		 <figure>
         <img src="./간판+이미지/사인탑/8.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>대성 공인중개사</figcaption>
       </figure>
 	<figure>
         <img src="./간판+이미지/사인탑/9.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>아이리더 안경,콘택트</figcaption>
       </figure>
        
     </div>
