--- a/2.html
+++ b/2.html
@@ -28,63 +28,63 @@
     <div id="columns">
       <figure>
         <img src="./간판+이미지/채널간판/1.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>생동 구이촌</figcaption>
       </figure>
 		<figure>
         <img src="./간판+이미지/채널간판/2.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>스타당구클럽</figcaption>
       </figure>
 		<figure>
         <img src="./간판+이미지/채널간판/3.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>스타당구클럽</figcaption>
       </figure>
 		<figure>
         <img src="./간판+이미지/채널간판/4.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>대리만족</figcaption>
       </figure>
 		<figure>
         <img src="./간판+이미지/채널간판/5.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>대리만족</figcaption>
       </figure>
 		<figure>
         <img src="./간판+이미지/채널간판/6.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>빼돌린 뒷고기</figcaption>
       </figure>
 		<figure>
         <img src="./간판+이미지/채널간판/7.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>사이버파크pc방</figcaption>
       </figure>
 		<figure>
         <img src="./간판+이미지/채널간판/8.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>모두 투어</figcaption>
       </figure>
 		<figure>
         <img src="./간판+이미지/채널간판/9.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>퍼스트 부동산</figcaption>
       </figure>
 		<figure>
         <img src="./간판+이미지/채널간판/10.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>윤씨네 포차</figcaption>
       </figure>
 		<figure>
         <img src="./간판+이미지/채널간판/11.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>(주)서원푸드시스템</figcaption>
       </figure>
 		<figure>
         <img src="./간판+이미지/채널간판/12.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>해운대 합천돼지국밥</figcaption>
       </figure>
 		<figure>
         <img src="./간판+이미지/채널간판/13.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>골드포레 부동산 </figcaption>
       </figure>
 		<figure>
         <img src="./간판+이미지/채널간판/14.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>먹깨비회 초장</figcaption>
       </figure>
 		<figure>
         <img src="./간판+이미지/채널간판/15.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>교동반점</figcaption>
       </figure>
  
       
