--- a/3.html
+++ b/3.html
@@ -7,11 +7,12 @@
         column-gap: 15px;
       }
       #columns figure{
-        display: inline-block;
+        
+		display:inline-block;
         border:1px solid rgba(0,0,0,0.2);
         margin:0;
         margin-bottom: 15px;
-        padding:10px;
+        padding:18px;
         box-shadow: 2px 2px 5px rgba(0,0,0,0.5);;
       }
       #columns figure img{
@@ -27,20 +28,20 @@
   <body>
     <div id="columns">
       <figure>
-        <img src="./간판+이미지/돌출간판/1.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <img src="./간판+이미지/돌출간판/4.png">
+        <figcaption>백세건강지압 안마원</figcaption>
       </figure>
 		<figure>
         <img src="./간판+이미지/돌출간판/3.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>후마치킨</figcaption>
       </figure>
 		<figure>
         <img src="./간판+이미지/돌출간판/2.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>와우 부동산</figcaption>
       </figure>
 		<figure>
-        <img src="./간판+이미지/돌출간판/4.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <img src="./간판+이미지/돌출간판/1.png">
+        <figcaption>퍼스트 부동산</figcaption>
       </figure>
  
       
