--- a/4.html
+++ b/4.html
@@ -28,32 +28,32 @@
     <div id="columns">
       <figure>
         <img src="./간판+이미지/기타간판/1.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>안평마을</figcaption>
       </figure>
 		 <figure>
         <img src="./간판+이미지/기타간판/2.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>다올헤어</figcaption>
       </figure>
 		
 		 <figure>
         <img src="./간판+이미지/기타간판/3.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>담안골 행복마을</figcaption>
       </figure>
 		 <figure>
         <img src="./간판+이미지/기타간판/4.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>dong sung tcs</figcaption>
       </figure>
 		 <figure>
         <img src="./간판+이미지/기타간판/5.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>엘르네일</figcaption>
       </figure>
 		 <figure>
         <img src="./간판+이미지/기타간판/6.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>경성대,부경대 역</figcaption>
       </figure>
 		 <figure>
         <img src="./간판+이미지/기타간판/7.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>전리단길</figcaption>
       </figure>
  
     </div>
