--- a/5.html
+++ b/5.html
@@ -28,23 +28,23 @@
     <div id="columns">
       <figure>
         <img src="./간판+이미지/썬팅/1.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption></figcaption>
       </figure>
 		<figure>
         <img src="./간판+이미지/썬팅/2.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>생고기 도매센터</figcaption>
       </figure>
 		<figure>
         <img src="./간판+이미지/썬팅/3.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>kcc 부동산</figcaption>
       </figure>
 		<figure>
         <img src="./간판+이미지/썬팅/4.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>대성 공인중개사</figcaption>
       </figure>
 		<figure>
         <img src="./간판+이미지/썬팅/5.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption>교동반점</figcaption>
       </figure>
  
     </div>
