--- a/6.html
+++ b/6.html
@@ -28,15 +28,15 @@
     <div id="columns">
       <figure>
         <img src="./간판+이미지/현수막/1.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption></figcaption>
       </figure>
 		 <figure>
         <img src="./간판+이미지/현수막/2.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption></figcaption>
       </figure>
 		 <figure>
         <img src="./간판+이미지/현수막/3.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption></figcaption>
       </figure>
     </div>
      
