--- a/7.html
+++ b/7.html
@@ -28,19 +28,19 @@
     <div id="columns">
       <figure>
         <img src="./간판+이미지/베너/1.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption></figcaption>
       </figure>
 		 <figure>
         <img src="./간판+이미지/베너/2.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption></figcaption>
       </figure>
 		 <figure>
         <img src="./간판+이미지/베너/3.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption></figcaption>
       </figure>
 		<figure>
         <img src="./간판+이미지/베너/4.png">
-        <figcaption>Cinderella wearing European fashion of the mid-1860’s</figcaption>
+        <figcaption></figcaption>
       </figure>
  
     </div>
